Fix layout, hierarchy, and display
Add visually hidden h2 elements and convert some bold statements to h3
elements. Remove buttons from h1 to independent container. Fix display at
intermediate widths to ensure content does not overlap. Fix border styling to
ensure square borders and rounded borders are not appearing in same space.
Change spans to divs where spans were inappropriate. Abstract inline styling to
Bootstrap classes where possible.

--- a/src/main/js/common/customStyles.css
+++ b/src/main/js/common/customStyles.css
@@ -2,6 +2,3 @@ svg {
     /* reset style from _reboot (bootstrap) */
     vertical-align: baseline;
 }
-label {
-    font-weight: bold;
-}
